SERVER-54685 Replace the ARM yield instruction with isb

(cherry picked from commit 6979525674af67405984c58585766dd4d0c3f2a8)